# manners

./: Cargo.toml  README.md  test.roff
jsons/: alloc.json  proc_macro.json  test.json
reference/: Cargo.toml
reference/src/: lib.rs
src/: gen.rs  main.rs  markdown.rs
