[package]
name = "manners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
errata = { version = "2.1.1", features = ["color"] }
flate2 = "1.0.28"
markdown = "1.0.0-alpha.16"
roff = "0.2.1"
rustdoc-json = "0.9.0"
rustdoc-types = "0.25.0"
sarge = "7.2.3"
serde_json = "1.0.116"
